--- a/src/index.css
+++ b/src/index.css
@@ -1,150 +1,66 @@
+/* #app {
+  max-width: 850px;
+  margin: 0 auto;
+} */
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    overscroll-behavior-y: contain;
+    margin:0;
+    padding:0;
 }
 
-#container {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px #ccc;
-}
-
-.control-container {
-    margin-top: 10px;
+nav {
+  padding: 20px 0 20px 0;
 }
 
 #transcript-div {
-    height: 250px;
-    overflow-y: auto;
-    padding: 20px;
-    background-color: #e0e0e0;
-    border-radius: 10px;
-    margin-top: 20px;
-    line-height: 1.5;
-    white-space: pre-wrap;       /* Since CSS 2.1 */
-    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-    white-space: -pre-wrap;      /* Opera 4-6 */
-    white-space: -o-pre-wrap;    /* Opera 7 */
-    word-wrap: break-word;       /* Internet Explorer 5.5+ */
-}
-
-.transcript-message {
-    margin-top: 10px;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: white;
-    box-shadow: 2px 2px 5px #ccc;
-    animation: fadein 0.5s;
-}
-
-@keyframes fadein {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
+  overflow-y: auto;
+  line-height: 1.5;
+  white-space: pre-wrap;       /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 /* Typing animation */
 .typing::after {
-    content: ".";
-    animation: typing 1s infinite;
+  content: ".";
+  animation: typing 1s infinite;
 }
 
 @keyframes typing {
-    0% {
-        opacity: 0;
-    }
+  0% {
+      opacity: 0;
+  }
 
-    20% {
-        opacity: 1;
-    }
+  20% {
+      opacity: 1;
+  }
 
-    100% {
-        opacity: 0;
-    }
+  100% {
+      opacity: 0;
+  }
 }
 
 /* Thinking animation */
 .thinking::after {
-    content: "";
-    border-radius: 50%;
-    display: inline-block;
-    border: 2px solid #000;
-    border-top-color: transparent;
-    animation: thinking 1s infinite;
-    width: 10px;
-    height: 10px;
-    margin-left: 5px;
+  content: "";
+  border-radius: 50%;
+  display: inline-block;
+  border: 2px solid #000;
+  border-top-color: transparent;
+  animation: thinking 1s infinite;
+  width: 10px;
+  height: 10px;
+  margin-left: 5px;
 }
 
 @keyframes thinking {
-    0% {
-        transform: rotate(0deg);
-    }
+  0% {
+      transform: rotate(0deg);
+  }
 
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-h1 {
-    text-align: center;
-}
-
-#controls {
-    margin-top: 20px;
-    text-align: center;
-}
-
-button {
-    padding: 10px 20px;
-    border-radius: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-
-button.reset {
-    padding: 10px 20px;
-    border-radius: 10px;
-    background-color: #7258d8;
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-
-button:disabled,
-button.reset:disabled {
-    background-color: #ccc;
-    color: #333;
-    cursor: default;
-}
-
-select {
-    font-size: 16px;
-    padding: 5px;
-    /* width: 200px; */
-    margin-top: 10px;
-}
-
-/* Responsive Design */
-@media (min-width: 30em) and (max-width: 60em) {
-    #container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-    #transcript-div {
-        height: 200px;
-    }
-}
-
-/* PWA */
-.unselectable {
-    user-select: none;
+  100% {
+      transform: rotate(360deg);
+  }
 }
