--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ nav {
   padding: 20px 0 20px 0;
 }
 
-#transcript-div {
+#transcript-div, #answer-div {
   overflow-y: auto;
   height: 200px;
   font-size: 1rem;
