talk to gpt (#13)
* use express

* gzip

* remvoe shrink-to-fit

* update index.html

* talk to gpt

* assign voice

* get voice

* precache url

* add voice support

* add voice support

* add voice support

* add voice support

* bug fix

* bug fix

* bug fix

* add model selection

* refactor the lang select

* default to better model

* update sw

* refactor

* add test button

* user lang

* remove voices code

* no playback

* remove playback

* add voice

* stop recogn

* set voice

* ui enhancement

* only set voices for non-en

* fine tune on start

* fine tune on start

* fine tune on start

* add google analytics

* fix lint warning

* fine tune the wording

* update description

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,9 @@ nav {
   padding: 20px 0 20px 0;
 }
 
-#transcript-div {
+#transcript-div, #answer-div {
   overflow-y: auto;
-  height: 200px;
+  height: 150px;
   font-size: 1rem;
   line-height: 1.5;
   white-space: pre-wrap;       /* Since CSS 2.1 */
