--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,10 @@ nav {
 
 #transcript-div, #answer-div {
   overflow-y: auto;
-  height: 150px;
+  height: 100px;
   font-size: 1rem;
   line-height: 1.5;
+  margin: 0;
   white-space: pre-wrap;       /* Since CSS 2.1 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
   white-space: -pre-wrap;      /* Opera 4-6 */
@@ -69,4 +70,42 @@ nav {
   100% {
       transform: rotate(360deg);
   }
+}
+
+/* Chat Message */
+
+.outbound {
+  border-radius: 0.5rem 0.5rem 0;
+  background-color: #1976D2;
+}
+
+.inbound {
+  border-radius: 0.5rem 0.5rem 0.5rem 0;
+  background-color: #f3f3f3;
+}
+
+/* typewriter animation */
+
+.typewriter {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .25em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+  100% {border-color: transparent}
 }
