--- a/src/index.css
+++ b/src/index.css
@@ -25,13 +25,10 @@ nav {
   word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
-#transcript-div.work, #answer-div.work {
-  height: 100px;
-}
 
 /* Typing animation */
 .typing::after {
-  content: ".";
+  content: "|";
   animation: typing 1s infinite;
 }
 
@@ -97,15 +94,20 @@ nav {
     blink-caret .75s step-end;
 }
 
+
 /* The typing effect */
+/*
 @keyframes typing {
   from { width: 0 }
   to { width: 100% }
 }
+*/
 
 /* The typewriter cursor effect */
+/*
 @keyframes blink-caret {
   from, to { border-color: transparent }
   50% { border-color: orange; }
   100% {border-color: transparent}
 }
+*/
