--- a/src/index.css
+++ b/src/index.css
@@ -25,13 +25,10 @@ nav {
   word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
-#transcript-div.work, #answer-div.work {
-  height: 100px;
-}
 
 /* Typing animation */
 .typing::after {
-  content: ".";
+  content: "|";
   animation: typing 1s infinite;
 }
 
@@ -82,30 +79,4 @@ nav {
 .inbound {
   border-radius: 0.5rem 0.5rem 0.5rem 0;
   background-color: #f3f3f3;
-}
-
-/* typewriter animation */
-
-.typewriter {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .25em; /* Adjust as needed */
-  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end;
-}
-
-/* The typing effect */
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: orange; }
-  100% {border-color: transparent}
 }
